# PowerMagisk

./: README.MD
docs/: build.md  project-structure.md  usage.md
magisk-battery/: install.sh  module.prop  post-fs-data.sh
magisk-cloud-services/: module.prop  post-fs-data.sh
magisk-cloud-services/remote/: remote_service.sh
magisk-cloud-services/sync/: sync_service.sh
magisk-cloud-services/update/: update_service.sh
magisk-firewall/: install.sh  module.prop  post-fs-data.sh
magisk-integration/system-apps/: module.prop  post-fs-data.sh
magisk-integration/tasker/: module.prop  post-fs-data.sh
magisk-integration/tasker/tasker/: MagiskTaskerPlugin.java
magisk-integration/xposed/: module.prop  post-fs-data.sh
magisk-module/: install.sh  module.prop  post-fs-data.sh
magisk-network/: install.sh  module.prop  post-fs-data.sh
magisk-performance/: install.sh  module.prop  post-fs-data.sh
magisk-privacy/: install.sh  module.prop  post-fs-data.sh
magisk-security/: install.sh  module.prop  post-fs-data.sh
magisk-theme/: module.prop
magisk-tools/scripts/: system_backup.sh  system_cleaner.sh
magisk-ui-plugin/: settings.gradle
magisk-ui-plugin/app/: build.gradle
zygisk-app-enhancer/: module.prop
zygisk-app-enhancer/src/: main.cpp
zygisk-behavior-monitor/: module.prop
zygisk-behavior-monitor/src/: main.cpp
zygisk-module/: Android.mk  CMakeLists.txt  module.prop
zygisk-module/src/: main.cpp
zygisk-permission/: module.prop
zygisk-permission/src/: main.cpp
zygisk-ui-customizer/: module.prop
zygisk-ui-customizer/src/: main.cpp
(+22 files in other folders)
